# python-mcp-agent-workshop

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  00-introduction.md  00-setup.md  01-transport.md  02-jsonrpc.md  03-initialize.md  04-tools.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  agent.toml  demo.py  mcp.json  pyproject.toml  sum_response.json  test_fastmcp_server.py  verification.py  verify_fastmcp.py
.githooks/: pre-commit
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-path-validation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-redos-protection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-error-sanitization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: keyword_analysis.toml  performance_profiler.toml  sum_agent.toml
docs/: api-reference.md  developer-guide.md  mcp-integration.md  performance-profiler.md
examples/: bad_performance.py  good_performance.py  mcp_client_example.py  programmatic_usage.py
lessons/: 01-keyword-search.md  01-technical-overview.md  02-mcp-server.md  02-technical-overview.md  03-agent-config.md  03-technical-overview.md  04-integration.md  04-technical-overview.md
spec/: documentation-plan.md  e2e-testing-plan.md  project-completion-plan.md
src/workshop_mcp/: __init__.py  keyword_search.py  logging_context.py  server.py
test_fixtures/: sample_bad_performance.py  sample_good_performance.py  sample_mixed.py  sample_syntax_error.py
tests/: __init__.py  test_agent_config.py  test_ast_analyzer.py  test_complexity_analysis.py  test_core.py  test_dead_code_detection.py  test_e2e_workflow.py  test_error_sanitization.py  test_keyword_search.py  test_logging_context.py  test_mcp_server_integration.py  test_mcp_server_protocol.py  test_path_validator.py  test_performance_checker.py  test_pythonic_checker.py  test_regex_validator.py  test_security_exception_handler.py
(+26 files in other folders)
